# petpal

./: .gitignore  CMakeLists.txt  README.md  package.xml
petpal_description/: CMakeLists.txt
petpal_description/cad/traxxas_rustler/: 1664(front).sldprt  1664(rear).sldprt  1675.sldprt  1726.sldprt  1951A.sldprt  1951B.sldprt  1951D.sldprt  1985.sldprt  2742.sldprt  3139.sldprt  3632L.sldprt  3638.sldprt  3654.sldprt  3655L.sldprt  3655R.sldprt  3722A.sldprt  3727A.sldprt  3727B.sldprt  3743L.sldprt  3744.sldprt  3760A(3762A).sldasm  3768-1.sldprt  3768-3.sldprt  3769(front).sldprt  3769(rear).sldprt  4628.sldprt  5576.sldprt  98543A101(98543A101).sldprt  Flat Head Screw_AM(B18.6.7M - M3 x 0.5 x 13 Type I Cross Recessed FHMS --13S).sldprt  Flat Head Screw_AM(B18.6.7M - M4 x 0.7 x 13 Type I Cross Recessed FHMS --13S).sldprt  Pan Cross Head_AM(B18.6.7M - M2.5 x 0.45 x 8 Type I Cross Recessed PHMS --8N).sldprt  Pan Cross Head_AM(B18.6.7M - M3 x 0.5 x 10 Type I Cross Recessed PHMS --10N).sldprt  Pan Cross Head_AM(B18.6.7M - M3 x 0.5 x 10 Type I Cross Recessed PHMS --10S).sldprt  Pan Cross Head_AM(B18.6.7M - M3 x 0.5 x 13 Type I Cross Recessed PHMS --13S).sldprt  Pan Cross Head_AM(B18.6.7M - M3 x 0.5 x 25 Type I Cross Recessed PHMS --25S).sldprt  Pan Cross Head_AM(B18.6.7M - M3 x 0.5 x 30 Type I Cross Recessed PHMS --30N).sldprt  Part1^wheel.sldprt  Prevailing Torque Hex Nut_am(AM-M4-S).sldprt  User Library-Hitec HS-475HB.sldprt  battery pack.sldprt  (+4 more)
petpal_description/cad/urdf_collision/: package.xml
petpal_description/cad/urdf_visual/: CMakeLists.txt
petpal_description/config/: controllers.yaml
petpal_description/meshes/collision/: bl_wheel.STL
petpal_description/src/: parser.cpp
petpal_description/urdf/: camera.urdf.xacro  depth_camera.urdf.xacro  gazebo_control.urdf.xacro  lidar.urdf.xacro  petpal.urdf.xacro  ros2_control.urdf.xacro
petpal_sim/launch/: petpal_load.launch.py  petpal_sim.launch.py  petpal_spawn.launch.py
petpal_sim/worlds/: empty.world
petpal_vision/: CMakeLists.txt  package.xml
petpal_vision/src/: 7_cnn.py  8_transfer_learning.py  9_save_load.py  camera_stream.py  camera_stream_node.py  object_tracker.py  object_tracking_node.py  oxford-iiit-pet.yaml  resnet.py  yolo_track.py  yolo_train.py
petpal_vision/src/oxford-iiit-pet/: train.py
rover/: package.xml
src/petpal_description/: CMakeLists.txt  package.xml
src/petpal_description/cad/traxxas_rustler/: 1765.sldprt  1914A.sldprt  1914B.sldprt  1926.sldprt  1942.sldprt  1951C.sldprt  2362.sldprt  2458A.sldprt  2530A.sldprt  2537.sldprt  2735.sldprt  2754.sldprt  3631.sldprt  3632.sldprt  3637.sldprt  3639.sldprt  3641A(69mm).sldprt  3641A(82mm).sldprt  3642.sldprt  3723A.sldprt  3736.sldprt  3743M.sldprt  3743R.sldprt  3752.sldprt  3757X.sldprt  3760A(3760A)-1.sldasm  3760A(3760A).sldasm  3760A(3762A)-1.sldasm  3765A(front).sldprt  3765A(rear).sldprt  3767-2.sldprt  3767.sldprt  3768-2.sldprt  Pan Cross Head_AM(B18.6.7M - M3 x 0.5 x 5 Type I Cross Recessed PHMS --5S).sldprt  Pan Cross Head_AM(B18.6.7M - M3 x 0.5 x 8 Type I Cross Recessed PHMS --8S).sldprt  Prevailing Torque Hex Nut_am(AM-M3-S).sldprt  body.sldprt  electric motor.sldprt  front spindle-1.sldasm  rear spindle(Default-_flexible2).sldasm  (+6 more)
src/petpal_description/cad/urdf/urdf/: vehicle.urdf.xacro
src/petpal_description/cad/urdf/urdf/meshes/collision/: fr_wheel.STL
src/petpal_description/cad/urdf/urdf/meshes/visual/: fl_wheel.STL
src/petpal_description/cad/urdf_collision/: CMakeLists.txt
src/petpal_description/cad/urdf_collision/config/: joint_names_urdf_collision.yaml
src/petpal_description/cad/urdf_collision/launch/: gazebo.launch
src/petpal_description/cad/urdf_visual/: package.xml
src/petpal_description/cad/urdf_visual/launch/: gazebo.launch
src/petpal_description/cad/urdf_visual/urdf/: urdf_visual.SLDASM.csv
src/petpal_description/meshes/collision/: base_link.STL  br_wheel.STL
src/petpal_description/urdf/: core.urdf.xacro  petpal.urdf.xacro  wheel.urdf.xacro
src/petpal_sim/: CMakeLists.txt  package.xml
src/petpal_sim/config/: config.rviz
src/petpal_sim/launch/: petpal_load.launch.py  petpal_sim.launch  petpal_sim.launch.py  petpal_spawn.launch.py
src/petpal_sim/tests/: basic_test.cpp
src/petpal_sim/worlds/: test.world
src/test_pkg/: package.xml
test_pkg/: CMakeLists.txt
(+9 files in other folders)
